chore: rename sms fields
